[gd_scene load_steps=15 format=3 uid="uid://dknj1300yo0se"]

[ext_resource type="Script" path="res://Levels/level.gd" id="1_uxpkq"]
[ext_resource type="Texture2D" uid="uid://gq1vl6j574hm" path="res://Assets/Tileset/monochrome_tilemap_transparent_packed.png" id="2_pks1a"]
[ext_resource type="PackedScene" uid="uid://c547rg4kx0i20" path="res://Scenes/hud.tscn" id="3_svorg"]
[ext_resource type="PackedScene" uid="uid://vfmiw4hc7cui" path="res://Scenes/Enviroment/door.tscn" id="5_scotj"]
[ext_resource type="PackedScene" uid="uid://7ybb8y8yuh4g" path="res://Scenes/Collectibles/coin.tscn" id="6_8sm0n"]
[ext_resource type="Texture2D" uid="uid://qr8j13phk7rn" path="res://Assets/Tileset/Cyberpunk platformer - World starter/background/parallax_background_layer_1.png" id="7_u21aj"]
[ext_resource type="Texture2D" uid="uid://btprju82ofqri" path="res://Assets/Tileset/Cyberpunk platformer - World starter/background/parallax_background_layer_2.png" id="8_sknq4"]
[ext_resource type="Texture2D" uid="uid://dc3fdixmyvgdw" path="res://Assets/Tileset/Cyberpunk platformer - World starter/background/parallax_background_layer_3.png" id="9_toqhi"]
[ext_resource type="Texture2D" uid="uid://ddn1tcgwuerc4" path="res://Assets/Tileset/Cyberpunk platformer - World starter/background/parallax_background_layer_4.png" id="10_5eotp"]
[ext_resource type="Texture2D" uid="uid://bqxbq4wy6wunl" path="res://Assets/Tileset/Cyberpunk platformer - World starter/background/parallax_background_layer_5.png" id="11_yokp4"]
[ext_resource type="AudioStream" uid="uid://cpcmwbxr7xnap" path="res://Sound/Music/bgm_action_2.mp3" id="12_o0f3l"]
[ext_resource type="PackedScene" uid="uid://ct75oaimhw0tm" path="res://Scenes/Player/player.tscn" id="12_wkvly"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pk58a"]
texture = ExtResource("2_pks1a")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
15:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:5/0 = 0
16:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:5/0 = 0
17:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:5/0 = 0
19:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
15:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:6/0 = 0
17:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:6/0 = 0
19:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
15:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:7/0 = 0
16:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:7/0 = 0
17:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:7/0 = 0
19:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
19:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0

[sub_resource type="TileSet" id="TileSet_pvjlj"]
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_pk58a")

[node name="Level1" type="Node2D"]
script = ExtResource("1_uxpkq")
level_num = 1

[node name="ParallaxBackground2" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground2"]
position = Vector2(256, -17)
motion_mirroring = Vector2(512, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground2/ParallaxLayer"]
texture = ExtResource("7_u21aj")

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground2/ParallaxLayer"]
position = Vector2(512, 0)
texture = ExtResource("7_u21aj")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground2"]
position = Vector2(256, -16)
motion_scale = Vector2(0.9, 1)
motion_mirroring = Vector2(512, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground2/ParallaxLayer2"]
texture = ExtResource("8_sknq4")

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground2/ParallaxLayer2"]
position = Vector2(512, 0)
texture = ExtResource("8_sknq4")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground2"]
position = Vector2(256, -16)
motion_scale = Vector2(0.8, 1)
motion_mirroring = Vector2(512, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground2/ParallaxLayer3"]
texture = ExtResource("9_toqhi")

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground2/ParallaxLayer3"]
position = Vector2(512, 0)
texture = ExtResource("9_toqhi")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground2"]
position = Vector2(256, -16)
motion_scale = Vector2(0.85, 1)
motion_mirroring = Vector2(512, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground2/ParallaxLayer4"]
texture = ExtResource("10_5eotp")

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground2/ParallaxLayer4"]
position = Vector2(512, 0)
texture = ExtResource("10_5eotp")

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground2"]
position = Vector2(256, -16)
motion_scale = Vector2(0.9, 1)
motion_mirroring = Vector2(512, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground2/ParallaxLayer5"]
texture = ExtResource("11_yokp4")

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground2/ParallaxLayer5"]
position = Vector2(512, 0)
texture = ExtResource("11_yokp4")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_pvjlj")
format = 2
layer_0/tile_data = PackedInt32Array(196608, 983041, 5, 262144, 983041, 6, 327680, 983041, 6, 196609, 1048577, 5, 196610, 1048577, 5, 196611, 1048577, 5, 196612, 1048577, 5, 393219, 983041, 5, 458755, 983041, 6, 393220, 1048577, 5, 393221, 1048577, 5, 393222, 1048577, 5, 393224, 1048577, 5, 393225, 1048577, 5, 393226, 1048577, 5, 393227, 1048577, 5, 393228, 1048577, 5, 393229, 1048577, 5, 393230, 1048577, 5, 196613, 1048577, 5, -589821, 1048577, 5, -393211, 1048577, 5, -196601, 1048577, 5, -589816, 1048577, 5, -196600, 1048577, 5, -196599, 1048577, 5, 11, 1048577, 5, 12, 1048577, 5, -524275, 1048577, 5, 13, 1048577, 5, -327664, 1048577, 5, -196588, 1048577, 5, 393231, 1048577, 5, 393232, 1048577, 5, 393233, 1048577, 5, 393234, 1048577, 5, 393235, 1048577, 5, 393236, 1048577, 5, 393237, 1048577, 5, 393238, 1048577, 5, 393239, 1048577, 5, 393242, 1048577, 5, 393243, 1048577, 5, 393244, 1048577, 5, 393245, 1048577, 5, 393246, 1048577, 5, 393240, 1048577, 5, 393241, 1048577, 5, 393271, 1048577, 5, 393247, 1048577, 5, 393223, 1048577, 5, 393248, 1048577, 5, 393249, 1048577, 5, 393250, 1048577, 5, 393251, 1048577, 5, 393252, 1048577, 5, 393253, 1048577, 5, 393254, 1048577, 5, 393255, 1048577, 5, 393256, 1048577, 5, 393257, 1048577, 5, 393258, 1048577, 5, 393259, 1048577, 5, 393260, 1048577, 5, 393261, 1048577, 5, 393262, 1048577, 5, 393263, 1048577, 5, 393264, 1048577, 5, 393265, 1048577, 5, 393266, 1048577, 5, 393267, 1048577, 5, 393268, 1048577, 5, 393269, 1048577, 5, 393270, 1048577, 5, 393272, 1048577, 5, 393273, 1048577, 5, 393274, 1048577, 5, 393275, 1048577, 5, 393276, 1048577, 5, 393277, 1048577, 5, 393278, 1048577, 5, 393279, 1048577, 5, 393280, 1048577, 5, 393281, 1048577, 5, 393282, 1048577, 5, 393283, 1048577, 5, 393284, 1048577, 5, 393285, 1048577, 5, 393286, 1048577, 5, 393287, 1048577, 5, 393288, 1048577, 5, 393289, 1048577, 5, 393290, 1048577, 5, 393291, 1048577, 5, 393292, 1048577, 5, 393293, 1048577, 5, 393294, 1048577, 5, 327759, 983041, 6, 262223, 983041, 6, 196687, 983041, 5, 196688, 1048577, 5, 196614, 1114113, 5)

[node name="HUD" parent="." instance=ExtResource("3_svorg")]

[node name="Door" parent="." instance=ExtResource("5_scotj")]
position = Vector2(68, 88)
level = "res://Levels/level_2.tscn"

[node name="Coins" type="Node" parent="."]

[node name="Coin" parent="Coins" instance=ExtResource("6_8sm0n")]
position = Vector2(88, -105)

[node name="Coin2" parent="Coins" instance=ExtResource("6_8sm0n")]
position = Vector2(56, -153)

[node name="Coin3" parent="Coins" instance=ExtResource("6_8sm0n")]
position = Vector2(136, -152)

[node name="Coin4" parent="Coins" instance=ExtResource("6_8sm0n")]
position = Vector2(216, -136)

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_o0f3l")
volume_db = -5.0
autoplay = true

[node name="Player" parent="." instance=ExtResource("12_wkvly")]
position = Vector2(46, 47)
scale = Vector2(0.816, 0.816)

[connection signal="player_entered" from="Door" to="." method="_on_door_player_entered"]
